--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="header">
 		<header>
 			<div class="image-wot"></div>
-			<nav class="navbar navbar-inverse navbar-fixed-top" >
+			<nav class="navbar navbar-inverse " >
 					<div class="container-fluid">
 						<div class="navbar-header">
 								<a class="navbar-brand" href="#">Tanks in <abbr title="World of Tanks">Wot</abbr></a>
@@ -184,16 +184,16 @@
      	<footer class="container-fluid text-center">
      	   <div class="col-md-4 contact-right" > 
      		<p class="text-center">Contact us in: </p>
-     			<p class="google-left"><i class="fa fa-google-plus" aria-hidden="true">  Google+</i></p>
-     			<p class="facebook-right"><i class="fa fa-facebook-square" aria-hidden="true">  Facebook</i> </p>
-     			<p class="twitter-center"><i class="fa fa-twitter" aria-hidden="true">  Twiter</i></p>
+     			<p class="google-left"><a href=" https://accounts.google.com/Login?hl=ru" target="_blank">  <i class="fa fa-google-plus" aria-hidden="true">  Google+</i></a></p>
+     			<p class="facebook-right"><a href="https://www.facebook.com/" target="_blank"> <i class="fa fa-facebook-square" aria-hidden="true">  Facebook</i></a> </p>
+     			<p class="twitter-center"><a href="https://twitter.com/login?lang=ru" target="_blank"> <i class="fa fa-twitter" aria-hidden="true">  Twiter</i></a></p>
      		</div>
          	
          	<div class="col-md-4 contact-left" > 
-     			<p class="text-center">Contact us in: </p>
-     			<p class="github-left"><i class="fa fa-github" aria-hidden="true">  GitHub</i></p>
-     			<p class="twitch-right"><i class="fa fa-twitch">  Twitch</i></p>
-     			<p class="vk-center"><i class="fa fa-vk" aria-hidden="true">  Vk</i></p>
+     		<p class="text-center">Contact us in: </p>
+     			<p class="github-left"><a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true">  GitHub</i></a></p>
+     			<p class="twitch-right"><a href="https://passport.twitch.tv/authentications/new?client_id=36926892495301a63b2e9350a38d3d6dbf72ad81e571a3ebba4687250ec8f352c70b3e91229602f73e1335528f3caa00a5cf513f484d7003784e722f2ce7a216&embed=0&error_code=&nonce=f6da8fb72abce38c9ef46206a342790fa97a5e49&redirect_uri=https%3A%2F%2Fwww.twitch.tv%2F&response_type=code&scope=openid&state=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJyZWRpcmVjdF9wYXRoIjoiaHR0cHM6Ly93d3cudHdpdGNoLnR2LyJ9.LJqY_XciO98NqOlYWbBNUjrpI5jG3GKTJi7nifp7-wc&stay_embedded=0&sudo_reason=&username=" target="_blank"><i class="fa fa-twitch">  Twitch</i></a></p>
+     			<p class="vk-center"><a href="https://m.vk.com/login" target="_blank"><i class="fa fa-vk" aria-hidden="true">  Vk</i></a></p>
      		 </div>
    		</footer>
    </body>
