--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-			<title>Bootstrap Example</title>
+			<title>My first Site</title>
 			<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -10,12 +10,11 @@
 			<link rel="stylesheet" href="style.css">
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-			<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 	</head>
 	<body  data-spy="scroll" data-target=".navbar">
 		<div class="header">
 		<header>
-			<div class="image-wot"></div>
+			<div class="image-wot" usemap="#Map"></div>
 			<nav class="navbar navbar-inverse " >
 					<div class="container-fluid">
 						<div class="navbar-header">
@@ -91,18 +90,18 @@
 					<div id="home">
 							<h1> Home </h1>
 							<details>
-						<summary>Home</summary>
-						<h2>This site is about <abbr title="World of Tanks">Wot</abbr></h2>
+								<summary>Home</summary>
+								<h2>This site is about <abbr title="World of Tanks">Wot</abbr></h2>
 								<p>World of Tanks — это массовая многопользовательская онлайн-игра, полностью посвященная бронированным машинам середины XX века. Игроки получат возможность плечом к плечу сражаться с поклонниками стальных гигантов со всех уголков планеты, отстаивая свои претензии на мировое танковое господство.</p>
-				</details>
-						</div>
-						<br>
-						<br>
-						<br> <br>
-						<br>
-						<br> <br>
-						<br>
-						<br>
+							</details>
+					</div>
+					<br>
+					<br>
+					<br> <br>
+					<br>
+					<br> <br>
+					<br>
+					<br>
 					<div id="is"> 
 						<h1 class="text-center">Ис 1</h1>
 								<img  class="img-is" src="images/indexs.jpg" alt="Is 1">
@@ -182,19 +181,19 @@
 		</div>
   		
      	<footer class="container-fluid text-center">
-     	   <div class="col-md-4 contact-right" > 
+     	     <div class="col-md-4 contact-right" > 
      		<p class="text-center">Contact us in: </p>
      			<p class="google-left"><a href=" https://accounts.google.com/Login?hl=ru" target="_blank">  <i class="fa fa-google-plus" aria-hidden="true">  Google+</i></a></p>
      			<p class="facebook-right"><a href="https://www.facebook.com/" target="_blank"> <i class="fa fa-facebook-square" aria-hidden="true">  Facebook</i></a> </p>
      			<p class="twitter-center"><a href="https://twitter.com/login?lang=ru" target="_blank"> <i class="fa fa-twitter" aria-hidden="true">  Twiter</i></a></p>
      		</div>
          	
-         	<div class="col-md-4 contact-left" > 
+         		<div class="col-md-4 contact-left" > 
      		<p class="text-center">Contact us in: </p>
      			<p class="github-left"><a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true">  GitHub</i></a></p>
      			<p class="twitch-right"><a href="https://passport.twitch.tv/authentications/new?client_id=36926892495301a63b2e9350a38d3d6dbf72ad81e571a3ebba4687250ec8f352c70b3e91229602f73e1335528f3caa00a5cf513f484d7003784e722f2ce7a216&embed=0&error_code=&nonce=f6da8fb72abce38c9ef46206a342790fa97a5e49&redirect_uri=https%3A%2F%2Fwww.twitch.tv%2F&response_type=code&scope=openid&state=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJyZWRpcmVjdF9wYXRoIjoiaHR0cHM6Ly93d3cudHdpdGNoLnR2LyJ9.LJqY_XciO98NqOlYWbBNUjrpI5jG3GKTJi7nifp7-wc&stay_embedded=0&sudo_reason=&username=" target="_blank"><i class="fa fa-twitch">  Twitch</i></a></p>
      			<p class="vk-center"><a href="https://m.vk.com/login" target="_blank"><i class="fa fa-vk" aria-hidden="true">  Vk</i></a></p>
      		 </div>
    		</footer>
-   </body>
-   </html>
+	</body>
+</html>
